--- a/FireWallSynthesizer.cabal
+++ b/FireWallSynthesizer.cabal
@@ -21,19 +21,20 @@ cabal-version:       >=1.10
 Library
   hs-source-dirs:      src
 
-  exposed-modules:     FWS, FWS.BVSat, FWS.BVPredicates, FWS.Utils, Export
+  exposed-modules:     FWS, Export
+  other-modules:       FWS.BVSat, FWS.BVPredicates, FWS.Parsers, FWS.Types, FWS.Utils
   other-extensions:    ForeignFunctionInterface, TemplateHaskell
 
-  ghc-options:         -O2 -threaded -dynamic
+  ghc-options:         -O2 -dynamic
 
   build-depends:         base >= 4.8
                        , containers >= 0.5.6.2
                        , mtl >= 2.2.1
                        , parsec >= 3.1.11
-                       , table-layout >= 0.7.0.0
                        , z3 == 4.1.7
                        , HaPy == 0.1.7
 
   default-language:    Haskell2010
 
-  extra-libraries: HSrts-ghc8.2.2, HSbase-4.10.1.0-ghc8.2.2
+  extra-lib-dirs: /usr/lib/ghc-8.0.2/rts, /usr/lib/ghc/rts
+  extra-libraries: HSrts-ghc8.0.2, HSbase-4.9.1.0-ghc8.0.2
